<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/MainFragment">

    <fragment
        android:id="@+id/MainFragment"
        android:name="com.loy.kit.MainFragment"
        android:label="@string/main_fragment_label"
        app:defaultNavHost="true"
        tools:layout="@layout/fragment_main">
        <action
            android:id="@+id/action_MainFragment_to_LogFragment"
            app:destination="@id/LogFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_MainFragment_to_CameraFragment"
            app:destination="@id/CameraFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/LogFragment"
        android:name="com.loy.kit.LogFragment"
        android:label="@string/log_fragment_label"
        tools:layout="@layout/fragment_log">

        <action
            android:id="@+id/action_LogFragment_to_MainFragment"
            app:destination="@id/MainFragment" />
    </fragment>

    <fragment
        android:id="@+id/CameraFragment"
        android:name="com.loy.kit.CameraFragment"
        android:label="@string/camera_fragment_label"
        tools:layout="@layout/fragment_camera">

        <action
            android:id="@+id/action_CameraFragment_to_Camera1Fragment"
            app:destination="@id/Camera1Fragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
        <action
            android:id="@+id/action_CameraFragment_to_Camera2Fragment"
            app:destination="@id/Camera2Fragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
        <action
            android:id="@+id/action_CameraFragment_to_CameraxFragment"
            app:destination="@id/CameraXFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
    </fragment>

    <fragment
        android:id="@+id/Camera1Fragment"
        android:name="com.loy.kit.Camera1Fragment"
        android:label="@string/camera1_fragment_label"
        tools:layout="@layout/fragment_camera">
    </fragment>

    <fragment
        android:id="@+id/Camera2Fragment"
        android:name="com.loy.kit.Camera2Fragment"
        android:label="@string/camera2_fragment_label"
        tools:layout="@layout/fragment_camera">
    </fragment>

    <fragment
        android:id="@+id/CameraXFragment"
        android:name="com.loy.kit.CameraXFragment"
        android:label="@string/camerax_fragment_label"
        tools:layout="@layout/fragment_camera">
    </fragment>
</navigation>